--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MyBluetoothApp</string>
+    <string name="prefs_file">com.example.mybluetoothapp.PRERENCE_FILE_KEY</string>
 </resources>
